# stock-screener

./: .coverage  .gitignore  Dockerfile  README.md  api.py  compress-png.sh  preloader.py  preloader.sh  run.sh  setup.py  stock-screener.ipynb  stock-screener.py  terminal.py
fins/: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  __init__.py  cli.py  fins  pyproject.toml  run_tests.py  test_parser.py
fins/config/: __init__.py
fins/data_sources/: __init__.py  cache.py  fmp.py  watchdog.py
fins/docs/: MANUAL.md  TODO.md
fins/dsl/: __init__.py  ast_transformer.py  basket_sort.py  command.py  command_column.py  command_functions.py  define.py  flow_command.py  operator_difference.py  operator_intersection.py  operator_union.py  output.py  parser.lark  parser.py  syntax_basket.py  syntax_command_chain.py  syntax_define.py  syntax_function_definition.py  syntax_operand_group.py  syntax_operation.py  syntax_sequence.py  token.py
fins/dsl/commands/: __init__.py  add.py  basket.py  basket_sort.py  col.py  column.py  command.py  create.py  define.py  difference.py  expression.py  filter.py  function.py  function_all_cryptos.py  function_all_etfs.py  function_all_stocks.py  help.py  (+30 more)
fins/entities/: __init__.py  basket.py  basket_item.py  column.py  entity.py  json_serializable.py  note.py  symbol.py  token.py
fins/financial/: __init__.py  cache.py  symbol.py
fins/formatting/: formatters.py  table.py
fins/storage/: __init__.py  entity_store.py  storage.py
fins/tests/: __init__.py  run_tests.py  test_basket.py  test_cache.py  test_column_commands.py  test_command_syntax.py  test_dsl.py  test_elementary_actions.py  test_financial.py  test_flow_command.py  test_fmp.py  test_integration.py  test_parser.py  test_real_execution.py  test_real_integration.py  test_sort_command.py  test_symbol.py  test_terminal_io.py  test_watchdog.py
(+36 files in other folders)
